Fix "stats" button top alignment

--- a/static/sass/main.scss
+++ b/static/sass/main.scss
@@ -129,7 +129,7 @@ header {
       font-size: 16px;
       text-align: center;
       border-radius: $default-border-radius;
-      border-bottom: 1px solid $bar-border-color;
+      box-shadow: 0 1px 0 $bar-border-color;
       border-right: 1px solid $bar-border-color;
       white-space: nowrap;
 
